--- a/ProyectoFinalAp2/Pages/Consultas/C_Productos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Productos.razor
@@ -78,11 +78,11 @@
                         <tr>
                             <td>@item.ProductoId</td>
                             <td>@item.Descripcion</td>
-                            <td>@CategoriasBLL.Buscar(@item.CategoriaiD).Descripcion</td>
+                            <td>@CategoriasBLL.Buscar(item.CategoriaiD).Descripcion</td>
                             <td>@item.Cantidad</td>
                             <td>@item.Precio</td>
                             <td>@item.Fecha</td>
-                            <td><a class="btn btn-outline-info" href="Articulos/@item.ProductoId">Ver</a></td>
+                            <td><a class="btn btn-outline-info" href="Productos/@item.ProductoId">Ver</a></td>
                         </tr>
                     }
                 </tbody>
