--- a/ProyectoFinalAp2/wwwroot/css/site.css
+++ b/ProyectoFinalAp2/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 @media screen and (max-width: 800px) {
 
@@ -72,7 +73,7 @@
 }
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 a, .btn-link {
