--- a/ProyectoFinalAp2/Pages/Index.razor
+++ b/ProyectoFinalAp2/Pages/Index.razor
@@ -18,7 +18,7 @@
                 <span class="icon-shop  text-center text-white"></span>
                 <p class="text-center text-white">Registro de productos</p>
             </div>
-        </a>
+        </a>    
 
         <a href="EntradaProductos">
             <div class="card-body" style="background-color: #F4D03F">
@@ -79,6 +79,8 @@
         <ul class="list-group-item-primary">Modulo de Productos</ul>
         <ul class="list-group-item-primary">Modulo de Facturacion</ul>
         <ul class="list-group-item-primary">Modulo de Entrada de Productos</ul>
+        <ul class="list-group-item-primary">Consultas</ul>
+        <ul class="list-group-item-primary">Reportes</ul>
 
     </div>
 </section>
