--- a/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
@@ -77,7 +77,7 @@
                                 <td>@item.Nombres</td>
                                 <td>@item.NombreUsuario</td>
                                 <td>@item.FechaIngreso</td>
-                                <td><a class="btn btn-outline-info" href="Articulos/@item.UsuarioId">Ver</a></td>
+                                <td><a class="btn btn-outline-info" href="Usuarios/@item.UsuarioId">Ver</a></td>
                             </tr>
                         }
                     </tbody>
