--- a/ProyectoFinalAp2/Pages/_Host.cshtml
+++ b/ProyectoFinalAp2/Pages/_Host.cshtml
@@ -38,5 +38,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </body>
 </html>
