Registro de factura agregado..

--- a/ProyectoFinalAp2/Pages/Index.razor
+++ b/ProyectoFinalAp2/Pages/Index.razor
@@ -27,9 +27,9 @@
             </div>
         </a>
 
-        <a href="Facturacion">
+        <a href="Facturas">
             <div class="card-body" style="background-color: #CA6F1E">
-                <span class="icon-show_chart  text-center text-white"></span>
+                <span class="icon-business  text-center text-white"></span>
                 <p class="text-center text-white">Facturacion</p>
             </div>
         </a>
