--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -39,6 +39,12 @@
                             </li>
 
                             <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Facturas">
+                                    <span class="icon-business" aria-hidden="true"></span> Facturación
+                                </NavLink>
+                            </li>
+
+                            <li class="list-unstyled">
                                 <NavLink class="nav-link" href="Clientes">
                                     <span class="icon-person_add" aria-hidden="true"></span> Cliente
                                 </NavLink>
