--- a/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
@@ -56,7 +56,7 @@
                     </div>
                     @*Precio*@
                     <div class="col">
-                        <label>COSTO:</label>
+                        <label>PRECIO:</label>
                         <InputNumber class="form-control" @bind-Value="precioEncontrado" readonly="true" />
                     </div>
 
