--- a/ProyectoFinalAp2/Pages/Registros/CategoriasComponent.razor
+++ b/ProyectoFinalAp2/Pages/Registros/CategoriasComponent.razor
@@ -34,10 +34,12 @@
         </div>
 
 
-        <div class="form-group">
-            <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
-            <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
-            <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
+        <div class="card-footer">
+            <div class="form-group text-center" display: inline-block>
+                <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
+                <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
+                <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
+            </div>
         </div>
 
     </div>
