--- a/ProyectoFinalAp2/Pages/Registros/ClientesComponent.razor
+++ b/ProyectoFinalAp2/Pages/Registros/ClientesComponent.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Clientes"
-@page "/Personas/{clienteId:int}"
+@page "/Clientes/{clienteId:int}"
 @using ProyectoFinalAp2.Models
 @using ProyectoFinalAp2.Controllers
 @using ProyectoFinalAp2.Data
@@ -65,12 +65,13 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
-            <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
-            <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
+        <div class="card-footer">
+            <div class="form-group text-center" display: inline-block>
+                <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
+                <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
+                <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
+            </div>
         </div>
-
     </div>  
 
 </EditForm>
@@ -88,7 +89,7 @@
         Nuevo();
         if (clienteId > 0)
         {
-            var auxCliente = ClientesBLL.Buscar(clientes.ClienteId);
+            var auxCliente = ClientesBLL.Buscar(clienteId);
             if (auxCliente != null)
                 this.clientes = auxCliente;
             else
