Consulta de categorias creada...

--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -67,7 +67,7 @@
                     {
                         <ul class="children">
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="">
+                                <NavLink class="nav-link" href="ConsultaCategorias">
                                     <span class="icon-data_usage" aria-hidden="true"></span> Categorias
                                 </NavLink>
                             </li>
