Consulta de factura creada....

--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -73,6 +73,12 @@
                             </li>
 
                             <li class="list-unstyled">
+                                <NavLink class="nav-link" href="ConsultaFacturas">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Facturas
+                                </NavLink>
+                            </li>
+
+                            <li class="list-unstyled">
                                 <NavLink class="nav-link" href="Consultas/Productos">
                                     <span class="icon-data_usage" aria-hidden="true"></span> Productos
                                 </NavLink>
