--- a/ProyectoFinalAp2/Pages/Index.razor
+++ b/ProyectoFinalAp2/Pages/Index.razor
@@ -34,7 +34,7 @@
             </div>
         </a>
 
-        <a href="Consultas/Clientes">
+        <a href="ConsultaClientes">
             <div class="card-body" style="background-color: #2e5381">
                 <span class="icon-people_outline  text-center text-white"></span>
                 <p class="text-center text-white">Consulta de clientes</p>
