--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -85,7 +85,7 @@
                             </li>
 
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="">
+                                <NavLink class="nav-link" href="ConsultaClientes">
                                     <span class="icon-data_usage" aria-hidden="true"></span> Clientes
                                 </NavLink>
                             </li>
